<resources>
    <string name="app_name">Constrain Layout</string>
    <string name="submit">Submit</string>
    <string name="stmik_widya_utama">STMIK WIDYA UTAMA</string>
    <string name="Vivi_Indriyani_Mufti_Afifah">Vivi Indriyani Mufti Afifah</string>
    <string name="ssi202202839">SSI202202839</string>
    <string name="mobile_programming">Mobile Programming</string>
    <string name="rian_kurniawan">Rian Kurniawan</string>
    <string name="ssi202203181">ssi202203181</string>
    <string name="SSI202203181">SSI202203181</string>
</resources>